crates/math-core/tests/snapshots/error_test__operatorname_with_begin.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\operatorname{\\begin{matrix}}"
---
Error: Not valid in text mode.
   ╭─[ <input>:1:15 ]
   │
 1 │ \operatorname{\begin{matrix}}
   │               ───────┬──────  
   │                      ╰──────── not valid in text mode
───╯
